--- a/Github/Scene/Search/Search.storyboard
+++ b/Github/Scene/Search/Search.storyboard
@@ -28,7 +28,33 @@
                                     </searchBar>
                                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v1E-U9-K2i">
                                         <rect key="frame" x="0.0" y="50" width="414" height="0.0"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="hGO-Lq-A6o">
+                                                <rect key="frame" x="16" y="-60" width="382" height="120.5"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="NoData" translatesAutoresizingMaskIntoConstraints="NO" id="5io-IF-zcf">
+                                                        <rect key="frame" x="151" y="0.0" width="80" height="80"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="80" id="IAO-Qc-xcA"/>
+                                                            <constraint firstAttribute="height" constant="80" id="XDT-Gf-bRZ"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Data to Display" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="en8-j0-vzg">
+                                                        <rect key="frame" x="120.5" y="100" width="141.5" height="20.5"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="hGO-Lq-A6o" secondAttribute="trailing" constant="16" id="Csq-Mg-t7P"/>
+                                            <constraint firstItem="hGO-Lq-A6o" firstAttribute="centerX" secondItem="v1E-U9-K2i" secondAttribute="centerX" id="MVG-L8-0pf"/>
+                                            <constraint firstItem="hGO-Lq-A6o" firstAttribute="leading" secondItem="v1E-U9-K2i" secondAttribute="leading" constant="16" id="jE8-E4-iw4"/>
+                                            <constraint firstItem="hGO-Lq-A6o" firstAttribute="centerY" secondItem="v1E-U9-K2i" secondAttribute="centerY" id="zaY-mX-V0G"/>
+                                        </constraints>
                                     </view>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GWD-Kk-zLw">
                                         <rect key="frame" x="0.0" y="50" width="414" height="768"/>
@@ -58,6 +84,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="NoData" width="512" height="512"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
